tests/skip/duplicate-setters-3.stderr
error: encountered duplicate `#[skip]` attribute for field
 --> $DIR/duplicate-setters-3.rs:5:24
  |
5 |     #[skip(setters)] #[skip]
  |                        ^^^^

error: duplicate `#[skip]` here
 --> $DIR/duplicate-setters-3.rs:5:7
  |
5 |     #[skip(setters)] #[skip]
  |       ^^^^
